test/lastuse7_2.slq

def main(){
	d:=H(0);
	n:=2:int[128];
	n[0]:=H(n[0]);
	k:=(d,n);
	if measure(H(0)){
		l:=(d,n); /// error
		measure(k,l);
	}else{
		(d,n):=k;
		measure(d,n);
	}
}
